[package]
name = "mp4"
version = "0.6.0"
authors = ["Alf <alf.g.jr@gmail.com>"]
edition = "2018"
description = "MP4 reader and writer library in Rust."
documentation = "https://docs.rs/mp4"
readme = "README.md"
homepage = "https://github.com/alfg/mp4-rust"
repository = "https://github.com/alfg/mp4-rust"
keywords = ["mp4", "iso-mp4", "isobmff", "video", "multimedia"]
license = "MIT"

[dependencies]
thiserror = "^1.0"
byteorder = "1"
bytes = "0.5"
num-rational = { version = "0.3", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench_main"
harness = false