[package]
name = "mp4"
version = "0.7.1"
authors = ["Alf <alf.g.jr@gmail.com>"]
edition = "2018"
description = "MP4 reader and writer library in Rust."
documentation = "https://docs.rs/mp4"
readme = "README.md"
homepage = "https://github.com/alfg/mp4-rust"
repository = "https://github.com/alfg/mp4-rust"
keywords = ["mp4", "iso-mp4", "isobmff", "video", "multimedia"]
license = "MIT"

[features]
default = ["use_serde"]
use_serde = ["serde", "serde_json"]

[dependencies]
thiserror = "^1.0"
byteorder = "1"
bytes = "0.5"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

num-traits = "0.2"

log = "0.4"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench_main"
harness = false
